{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 177,
  "lineage": "b145e0cc-9f5d-2417-94cc-4e03e9ab625b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-023a366a74f5cd555",
            "domain": "vpc",
            "id": "eipalloc-024c06f29d02e18c0",
            "network_border_group": "us-east-2",
            "network_interface": "eni-07cb7ea9f277d33e7",
            "private_dns": "ip-10-0-2-251.us-east-2.compute.internal",
            "private_ip": "10.0.2.251",
            "public_dns": "ec2-3-133-3-165.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.3.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT_EIP"
            },
            "tags_all": {
              "Name": "NAT_EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CICD_TEST_EC2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d4b7182ac3480fa",
            "arn": "arn:aws:ec2:us-east-2:553303225826:instance/i-041b8317ef11d9056",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041b8317ef11d9056",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0865db0b915cc45e5",
            "private_dns": "ip-10-0-1-147.us-east-2.compute.internal",
            "private_ip": "10.0.1.147",
            "public_ip": "3.145.164.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0191d1d5ceccc80af",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8615af67527bdfc",
            "tags": {
              "Name": "CICD_TEST_EC2_1"
            },
            "tags_all": {
              "Name": "CICD_TEST_EC2_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05feb9764323a81b9"
            ]
          },
          "dependencies": [
            "aws_security_group.MySG",
            "aws_subnet.PublicSubnetA1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:553303225826:internet-gateway/igw-083bee960ff621392",
            "id": "igw-083bee960ff621392",
            "owner_id": "553303225826",
            "tags": {
              "Name": "GW"
            },
            "tags_all": {
              "Name": "GW"
            },
            "vpc_id": "vpc-0af63701ba1a91919"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "MyNATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024c06f29d02e18c0",
            "connectivity_type": "public",
            "id": "nat-0a66567eda5bb8ef8",
            "network_interface_id": "eni-07cb7ea9f277d33e7",
            "private_ip": "10.0.2.251",
            "public_ip": "3.133.3.165",
            "subnet_id": "subnet-03f7e22d16a434405",
            "tags": {
              "Name": "MyNATGW"
            },
            "tags_all": {
              "Name": "MyNATGW"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.GW",
            "aws_subnet.PublicSubnetB1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:553303225826:route-table/rtb-02b8aff6d4dde3563",
            "id": "rtb-02b8aff6d4dde3563",
            "owner_id": "553303225826",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a66567eda5bb8ef8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRT"
            },
            "tags_all": {
              "Name": "PrivateRT"
            },
            "vpc_id": "vpc-0af63701ba1a91919"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.GW",
            "aws_nat_gateway.MyNATGW",
            "aws_subnet.PublicSubnetB1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:553303225826:route-table/rtb-0a10164b358dde172",
            "id": "rtb-0a10164b358dde172",
            "owner_id": "553303225826",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083bee960ff621392",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "Name": "PublicRT"
            },
            "vpc_id": "vpc-0af63701ba1a91919"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT_Association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a7526f59f68497a",
            "route_table_id": "rtb-02b8aff6d4dde3563",
            "subnet_id": "subnet-06b7e6616752f0223"
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.GW",
            "aws_nat_gateway.MyNATGW",
            "aws_route_table.PrivateRT",
            "aws_subnet.PrivateSubnetA2",
            "aws_subnet.PublicSubnetB1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT_Association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4ef286f4d4fe2f4",
            "route_table_id": "rtb-02b8aff6d4dde3563",
            "subnet_id": "subnet-09f92fbdfc3f1ada8"
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.GW",
            "aws_nat_gateway.MyNATGW",
            "aws_route_table.PrivateRT",
            "aws_subnet.PrivateSubnetB2",
            "aws_subnet.PublicSubnetB1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_RT_Association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042774ac390d70949",
            "route_table_id": "rtb-0a10164b358dde172",
            "subnet_id": "subnet-03f7e22d16a434405"
          },
          "dependencies": [
            "aws_route_table.PublicRT",
            "aws_subnet.PublicSubnetB1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_RT_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed54920dd27b4442",
            "route_table_id": "rtb-0a10164b358dde172",
            "subnet_id": "subnet-0a8615af67527bdfc"
          },
          "dependencies": [
            "aws_route_table.PublicRT",
            "aws_subnet.PublicSubnetA1",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:553303225826:security-group/sg-05feb9764323a81b9",
            "description": "Allow HTTP(80/tcp, 8080/tcp), ssh(22/tcp)",
            "egress": [],
            "id": "sg-05feb9764323a81b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP(80)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPs(8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh(22)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "MySG",
            "name_prefix": "",
            "owner_id": "553303225826",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySG"
            },
            "tags_all": {
              "Name": "MySG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af63701ba1a91919"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetA2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:553303225826:subnet/subnet-06b7e6616752f0223",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06b7e6616752f0223",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553303225826",
            "tags": {
              "Name": "PrivateSubnetA2"
            },
            "tags_all": {
              "Name": "PrivateSubnetA2"
            },
            "vpc_id": "vpc-0af63701ba1a91919"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetB2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:553303225826:subnet/subnet-09f92fbdfc3f1ada8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-09f92fbdfc3f1ada8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553303225826",
            "tags": {
              "Name": "PrivateSubnetB2"
            },
            "tags_all": {
              "Name": "PrivateSubnetB2"
            },
            "vpc_id": "vpc-0af63701ba1a91919"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetA1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:553303225826:subnet/subnet-0a8615af67527bdfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a8615af67527bdfc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553303225826",
            "tags": {
              "Name": "PublicSubnetA1"
            },
            "tags_all": {
              "Name": "PublicSubnetA1"
            },
            "vpc_id": "vpc-0af63701ba1a91919"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetB1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:553303225826:subnet/subnet-03f7e22d16a434405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03f7e22d16a434405",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553303225826",
            "tags": {
              "Name": "PublicSubnetB1"
            },
            "tags_all": {
              "Name": "PublicSubnetB1"
            },
            "vpc_id": "vpc-0af63701ba1a91919"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:553303225826:vpc/vpc-0af63701ba1a91919",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d6041eac0446cdc",
            "default_route_table_id": "rtb-02b31778bf9b69098",
            "default_security_group_id": "sg-04fb52afbf1bd9022",
            "dhcp_options_id": "dopt-0ade58b2868f2e760",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0af63701ba1a91919",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02b31778bf9b69098",
            "owner_id": "553303225826",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}